# askr

./: .clang-format  .gitignore  .travis.yml  Makefile.am  README.md  annotated.html  askr_8cc.html  askr_8cc__incl.map  askr_8cc__incl.md5  askr_8cc_source.html  askr_8h.html  askr_8h__dep__incl.map  askr_8h__dep__incl.md5  askr_8h__incl.map  askr_8h__incl.md5  askr_8h_source.html  buffers_8h.html  buffers_8h__dep__incl.map  buffers_8h__dep__incl.md5  buffers_8h__incl.map  buffers_8h__incl.md5  buffers_8h_source.html  classaskr_1_1_buffer.html  classaskr_1_1_key_value_store.html  classaskr_1_1_key_value_store__coll__graph.map  classaskr_1_1_key_value_store__coll__graph.md5  classaskr_1_1_key_value_store__inherit__graph.md5  classaskr_1_1_option.html  classaskr_1_1_option_values.html  classaskr_1_1_options.html  classaskr_1_1_options__coll__graph.map  classaskr_1_1_options__coll__graph.md5  classaskr_1_1_options__inherit__graph.md5  classes.html  configure.ac  csv__reader_8cc.html  csv__reader_8cc_source.html  dir_000000_000001.html  dir_128b9a236a0ab7146880dce52c68a878.html  dir_38c8d24aef3972a7f87b834274e76e31.html  (+68 more)
.github/ISSUE_TEMPLATE/: bug_report.md  crash-report.md  feature_request.md
ci/: dispatch.jdp  node.jdp
docs/: Doxyfile  Makefile.am
examples/: askr_grep.yaml
include/askr/: askr.h  buffers.h  keyvals.h
lib/: Makefile.am
lib/yaml-cpp/: Makefile.am
plugins/: Makefile.am  csv_reader.cc
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+5 more)
src/: Makefile.am  askr.cc  key_values.cc  options.cc  options.h  yaml.cc  yaml.h
test/: Makefile.am
